--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,7 +1,9 @@
 {
-    "singleQuote": true,
-    "semi": false,
-    "trailingComma": "none",
-    "tabWidth": 4,
-    "bracketSpacing": true
+	"semi": false,
+	"singleQuote": true,
+	"useTabs": true,
+	"tabWidth": 2,
+	"bracketSpacing": true,
+	"arrowParens": "avoid",
+	"trailingComma": "es5"
 }
