--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
 	"author": "",
 	"license": "ISC",
 	"devDependencies": {
-		"@playwright/test": "^1.45.0"
+		"@playwright/test": "^1.45.0",
+		"@types/node": "^22.5.1"
 	},
 	"dependencies": {
+		"node-fetch": "^2.6.7",
 		"uuid": "^10.0.0"
 	}
 }
