--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
 	"author": "",
 	"license": "ISC",
 	"devDependencies": {
-		"@playwright/test": "^1.45.0",
-		"@types/node": "^22.5.1"
+		"@playwright/test": "^1.45.0"
 	},
 	"dependencies": {
+		"dotenv": "^16.0.3",
 		"node-fetch": "^2.6.7",
 		"uuid": "^10.0.0"
 	}
