develops yml file for github actions

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,14 +1,22 @@
-# *.yaml or *.yml is all about indentation (mostly 2 spaces)
-name: Playwright Tests # name => pipeline's name
-on: # on => when to run
-  push: # push => run on every push
-    branches: [main] # branches => run on every push to main branch (or more branches)
-jobs: # jobs => set of tasks that runs sequentially as defined by the user
-  playwrighttests: # playwrighttests => job's name
-    runs-on: ubuntu-latest # runs-on: ubuntu-latest => we mostly choose a linux distribution for CI/CD
-    steps: # steps => what is to be done (like npm install for instance)
-      - name: Checkout repository # name => name of the step
-        uses: actions/checkout@v2 # uses: actions/checkout@v2 => what the step does ("uses" means it's a github action actually, that does e.a. git pull & git fetch)
-      - name: Say hello # name => name of the step
-        run: echo Hello World! # run: echo Hello World! => instead of "uses", we explicitely type "run" to use terminal commands independently of any github action
-
+name: Playwright Tests
+on:
+  push:
+    branches: [main]
+jobs:
+  playwrighttests:
+    runs-on: ubuntu-latest
+    container:
+      image: mcr.microsoft.com/playwright:v1.29.1-focal
+      env:
+        ADMIN_PASSWORD: ${{ secrets.ADMIN_PASSWORD }}
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+      - name: Run tests
+        run: |
+          echo "Start the shopping store application"
+          ./shopping-store-linux-amd64 &
+          echo "Install dependencies from lockfile"
+          npm ci
+          echo "Run playwright tests"
+          npm run test:ci
