--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
 	"main": "index.js",
 	"scripts": {
 		"llama": "ollama run llama3",
-		"test": "playwright test --headed"
+		"test": "playwright test --headed",
+		"test:ci": "playwright test"
 	},
 	"keywords": [],
 	"author": "",
