--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Run tests
         run: |
           echo "Start the shopping store application"
-          ./shopping-store-linux-amd64 &
+          chmod +x ./fixtures/RickStoreLinux &
           echo "Install dependencies from lockfile"
           npm ci
           echo "Run playwright tests"
