finished Rick Schubert's playwright course

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 	"scripts": {
 		"llama": "ollama run llama3",
 		"test": "playwright test --headed",
+		"testui": "playwright test --ui", 
 		"test:ci": "playwright test"
 	},
 	"keywords": [],
