--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
 	"author": "",
 	"license": "ISC",
 	"devDependencies": {
-		"@playwright/test": "^1.45.0"
+		"@playwright/test": "^1.45.0",
+		"prettier": "3.4.2"
 	},
 	"dependencies": {
 		"dotenv": "^16.0.3",
